# GpoSolver

./: CMakeLists.txt  README.md
examples/: StressMatrixProblem.cpp  StressMatrixProblem.hpp  main.cpp  stress_matrix_problem.cpp  stress_matrix_problem.h  test.cpp
include/gposolver/: gpoproblem.h  gposolver_base.h  gposolver_csdp.h  gposolver_mosek.h  gposolver_sdpa.h  logging.h
matlab/: degree.m  gpogenerator.m  gporelax.m  gposolve.m  isnumber.m  ispoly.m  nchk.m  pbasis.m  sssmatrix.m
win/lib/: BLAS.lib  LAPACK.lib  csdp.lib
win/vs2008/examples/: examples.sln
win/vs2008/examples/hec_solver1/: hec_solver1.vcproj
win/vs2008/examples/hec_solver2/: hec_solver2.vcproj
win/vs2008/examples/hec_solver3/: hec_solver3.vcproj
win/vs2008/examples/herwc_solver1/: herwc_solver1.vcproj
win/vs2008/examples/herwc_solver2/: herwc_solver2.vcproj
win/vs2008/examples/herwc_solver3/: herwc_solver3.vcproj
win/vs2008/examples/pnp_solver/: pnp_solver.vcproj
win/vs2008/examples/pop_solver/: pop_solver.vcproj
win/vs2010/examples/hec_solver1/: hec_solver1.vcxproj
win/vs2010/examples/hec_solver2/: hec_solver2.vcxproj
win/vs2010/examples/hec_solver3/: hec_solver3.vcxproj
win/vs2010/examples/herwc_solver1/: herwc_solver1.vcxproj
win/vs2010/examples/herwc_solver2/: herwc_solver2.vcxproj
win/vs2010/examples/herwc_solver3/: herwc_solver3.vcxproj
win/vs2010/examples/pnp_solver/: pnp_solver.vcxproj
win/vs2010/examples/pop_solver/: pop_solver.vcxproj
win/vs2013/examples/: examples.sln
win/vs2013/examples/hec_solver1/: hec_solver1.vcxproj
win/vs2013/examples/hec_solver2/: hec_solver2.vcxproj
win/vs2013/examples/hec_solver3/: hec_solver3.vcxproj
win/vs2013/examples/herwc_solver1/: herwc_solver1.vcxproj
win/vs2013/examples/herwc_solver2/: herwc_solver2.vcxproj
win/vs2013/examples/herwc_solver3/: herwc_solver3.vcxproj
win/vs2013/examples/pnp_solver/: pnp_solver.vcxproj
win/vs2013/examples/pop_solver/: pop_solver.vcxproj
